Split the items db interface into Query and Result; canApply includes availability